Add Oscar to team pets page

--- a/data/pets.yml
+++ b/data/pets.yml
@@ -2731,6 +2731,19 @@
   human: Tosin Falade
   story: |-
     Ricci is an energetic and extremely social Pomeranian living in Arizona who keep me quite busy (daily). She loves going to the dog park to interact with other dogs & humans.     
+- name: Oscar
+  picture: oscarma.jpg
+  human: Leaminn Ma
+  story: Oscar was adopted from an animal shelter when he was 5 years-old. He's now 11 years-old
+    (as of August 2022) and has established himself as the head of the household. His parents
+    might be a little biased, but Oscar is incredibly handsome and they often tell him he's the
+    "cutest boy in the whole world."  His morning routine consists of tapping on his mom's
+    face to serve him breakfast and getting some fresh air in the yard. He also enjoys purring
+    on his mom's lap while perched on her right arm as she types. Oscar has been getting a bit
+    chubbier lately but he insists it's only because he's in dire need of snacks all the time.
+    One of his favourite pastimes is helping with jigsaw puzzles by lying down on top of the
+    pieces you're working on. Overall, he's a very friendly and cuddly cat, and is very much
+    loved to bits. 
 - name: You?
   picture: "../../gitlab-logo-extra-whitespace.png"
   human:
