--- a/data/team_members/person/m/mdhakolia.yml
+++ b/data/team_members/person/m/mdhakolia.yml
@@ -3,11 +3,11 @@ locality:
 country: Remote
 role: <a href="">Senior Public Sector Customer Success Manager</a>
 reports_to: dthompson3
-picture: ../gitlab-logo-extra-whitespace.png
+picture: mukuldhakolia.jpeg
 pronouns:
 pronunciation:
 twitter:
-linkedin:
+linkedin: mukuldhakolia
 gitlab: mdhakolia
 departments:
   - Customer Success
