--- a/data/team_members/person/m/mdhakolia.yml
+++ b/data/team_members/person/m/mdhakolia.yml
@@ -1,7 +1,7 @@
 name: Mukul Dhakolia
 locality: 
 country: Remote
-role: <a href="">Senior Public Sector Customer Success Manager</a>
+role: <a href="">Senior Customer Success Manager</a>
 reports_to: dthompson3
 picture: mukuldhakolia.jpeg
 pronouns:
