--- a/data/team_members/person/a/ashrafkhamis.yml
+++ b/data/team_members/person/a/ashrafkhamis.yml
@@ -3,7 +3,7 @@ name: Ashraf Khamis
 locality:
 country: Remote
 role: <a href="/job-families/product/technical-writer/#senior-technical-writer">Senior
-  Technical Writer</a>
+  Technical Writer</a>, Create:Editor & Manage:Integrations
 reports_to: kpaizee
 picture: ashrafkhamis.jpg
 pronouns: he/him
@@ -24,8 +24,7 @@ projects:
   gitlab-chart: maintainer docs
   omnibus-gitlab: maintainer docs
 specialty:
-- Create:Editor
-- " Manage: Integrations"
+- 'Create: Editor'
+- 'Manage: Integrations'
 expertise:
 story:
-
