Extract group from link

--- a/data/team_members/person/l/liborvanc.yml
+++ b/data/team_members/person/l/liborvanc.yml
@@ -2,7 +2,7 @@
 name: Libor Vanc
 locality:
 country: Remote
-role: <a href="/job-families/product/product-designer/">Senior Product Designer, Manage:Integrations</a>
+role: <a href="/job-families/product/product-designer/">Senior Product Designer</a>, Manage:Integrations
 reports_to: taurie
 picture: liborvanc.jpg
 twitter: liborvanc
@@ -22,4 +22,3 @@ story: 'Libor has years of experience designing digital products and services fo
   reading, listing to jazz and spending time with his family. '
 specialty:
 - 'Manage: Integrations'
-
