--- a/data/team_members/person/s/sgregory2.yml
+++ b/data/team_members/person/s/sgregory2.yml
@@ -3,7 +3,7 @@ name: Sean Gregory
 locality:
 country: Remote
 role: <a href="/job-families/engineering/software-engineer-in-test/">Senior Software
-  Engineer in Test, Manage:Integrations</a>
+  Engineer in Test</a>, Manage:Integrations
 reports_to: ramya-authappan
 picture: seangregory.jpg
 pronouns: He/Him
@@ -24,4 +24,3 @@ expertise:
 story: |
   Sean is a software engineer with a passion for quality.
   In his free time you may find him painting, writing code, or enjoying a cup of coffee.
-
