Offboarding of PH updates

--- a/data/team_members/person/c/chesternwachukwu.yml
+++ b/data/team_members/person/c/chesternwachukwu.yml
@@ -4,7 +4,7 @@ locality:
 country: Remote
 role: <a href="/job-families/sales/customer-success-management/">Customer Success Manager
   (Mid Market East)</a>
-reports_to: patrick-h
+reports_to: lhan
 picture: chesternwachukwu.jpg
 gitlab: cnwachukwu
 departments:
