--- a/data/team_members/person/j/jess_perry.yml
+++ b/data/team_members/person/j/jess_perry.yml
@@ -2,7 +2,7 @@ name: Jess Perry
 locality: 
 country: Remote
 role: <a href="">Customer Success Manager</a>
-reports_to: patrick-h
+reports_to: lhan
 picture: jessperry.jpg
 pronouns:
 pronunciation:
