--- a/data/team_members/person/o/osnatvider.yml
+++ b/data/team_members/person/o/osnatvider.yml
@@ -4,7 +4,7 @@ locality:
 country: Remote
 role: <a href="/job-families/sales/customer-success-management/">Customer Success Manager,
   EMEA</a>
-reports_to: patrick-h
+reports_to: christina-souleles
 picture: osnatvider.jpg
 twitter: 
 mentor: true
