--- a/data/team_members/person/b/brettgadberry.yml
+++ b/data/team_members/person/b/brettgadberry.yml
@@ -3,7 +3,7 @@ name: Brett Gadberry
 locality:
 country: Remote
 role: <a href="/job-families/sales/customer-success-management/">Customer Success Manager</a>
-reports_to: patrick-h
+reports_to: lhan
 picture: brettgadberry.png
 twitter: 
 gitlab: bgadberry
