--- a/data/team_members/person/e/estebandroid.yml
+++ b/data/team_members/person/e/estebandroid.yml
@@ -2,7 +2,7 @@ name: Esteban Salas
 locality:
 country: Remote
 role: <a href="/job-families/sales/customer-success-management/">Customer Success Manager</a>
-reports_to: patrick-h
+reports_to: lhan
 picture: Esteban-Salas.jpg
 pronouns: He/Him/His
 pronunciation: ehs-TAI-vaan
