--- a/data/team_members/person/o/obicke.yml
+++ b/data/team_members/person/o/obicke.yml
@@ -2,7 +2,7 @@ name: Omar Bickell
 locality:
 country: Remote
 role: <a href="/job-families/sales/customer-success-management/">Customer Success Manager</a>
-reports_to: patrick-h
+reports_to: lhan
 picture: omarbickell.png
 pronouns: him/his
 pronunciation: My last name rhymes with all the other words in English that end in "ell", e.g. bell, tell, sell, etc.
