Add container-scanning maintainer role

--- a/data/team_members/person/h/hacks4oats.yml
+++ b/data/team_members/person/h/hacks4oats.yml
@@ -24,4 +24,4 @@ projects:
   gitlab-shell: trainee_maintainer
   secure-DS-gemnasium: reviewer backend
   secure-LC-license-finder: reviewer backend
-  secure-container-scanning: reviewer backend
+  secure-container-scanning: maintainer backend
