Add Gary as Backend Maintainer

--- a/data/team_members/person/g/garyholtz.yml
+++ b/data/team_members/person/g/garyholtz.yml
@@ -15,7 +15,7 @@ departments:
 - Create:Code Review BE Team
 - Create:Code Review
 projects:
-  gitlab: trainee_maintainer backend
+  gitlab: maintainer backend
   gitlab-development-kit: trainee_maintainer
   gitlab-cli: maintainer
 story: |
