--- a/data/team_members/person/e/emccrann.yml
+++ b/data/team_members/person/e/emccrann.yml
@@ -11,6 +11,7 @@ linkedin: eugene-mccrann-ba813246
 gitlab: emccrann
 departments:
   - Legal & Corporate Affairs
+  - Analytics Section Legal & Corporate Affairs Stable Counterpart
 specialty: 
 expertise:
 story: >
