--- a/data/team_members/person/i/igorman.yml
+++ b/data/team_members/person/i/igorman.yml
@@ -14,6 +14,7 @@ departments:
   - Dev Section Legal & Corporate Affairs Stable Counterpart
   - SaaS Platforms Section Legal & Corporate Affairs Stable Counterpart
   - Sec Section Legal & Corporate Affairs Stable Counterpart
+  - Enablement Section Legal & Corporate Affairs Stable Counterpart
 specialty: 
 expertise:
 story:
