--- a/data/categories.yml
+++ b/data/categories.yml
@@ -2507,96 +2507,144 @@ purchase:
   stage: fulfillment
   description: "Focused on first-order purchase experiences, including SM Web-Direct First Order, SaaS Web-Direct First Order, Purchase CI Minutes, Purchase Storage, and Community Programs - sign up."
   direction: https://about.gitlab.com/direction/fulfillment/purchase/
+  available: 
+  viable: 
+  complete:
+  lovable:
+  maturity: viable
   marketing: false
-  maturity:
 
 commerce_integrations:
   name: Commerce Integrations
   stage: fulfillment
   description: "Includes the channel partner experience, compliance for partner sourced customers, and CDot integration with SFDC and Platypus."
   direction: https://about.gitlab.com/direction/fulfillment/commerce-integrations/
+  available: 2021-02-01
+  viable: 
+  complete:
+  lovable:
+  maturity: minimal
   marketing: false
-  maturity:
 
 sm_provisioning:
   name: SM Provisioning
   stage: fulfillment
   description: "Includes all Self-Managed instance provisioning features such as Cloud License, Offline License, Legacy license, and Trial Licenses"
   direction: 
+  available: 
+  viable: 
+  complete:
+  lovable:
+  maturity: viable
   marketing: false
-  maturity:
 
 saas_provisioning:
   name: SaaS Provisioning
   stage: fulfillment
   description: "Includes all SaaS instance provisioning features such as Namespace Paid or Trial Plan provisioning and deprovisioning, consumables provisioning and deprovisioning, and more." 
   direction: 
+  available: 
+  viable: 
+  complete:
+  lovable:
+  maturity: viable
   marketing: false
-  maturity:
 
 billing_and_payments:
   name: Billing & Payments
   stage: fulfillment
   description: "Tools to allow customers to view their invoices and pay them. Includes: Pay invoices, Payment Method Management, Subscription view, w/ special UX for Reseller customers, Gitlab.com Billing page, Viewing invoices" 
   direction: 
+  available: 
+  viable: 
+  complete:
+  lovable:
+  maturity: viable
   marketing: false
-  maturity:
 
 subscription_management:
   name: Subscription Management
   stage: fulfillment
   description: "Allow customers to modify existing subscriptions. Includes: seat purchases (via portal or QSR), plan upgrades, cancel subscription (disable auto-renewal), renewals (manual or auto-renewal), Community Programs - Renewal, and account contact management" 
   direction: 
+  available: 
+  viable: 
+  complete:
+  lovable:
+  maturity: viable
   marketing: false
-  maturity:
 
 subscription_usage_reports:
   name: Subscription Usage Reports
   stage: fulfillment
   description: "Gives users visibility into their subscription usage and consumption. Includes: Seat Usage Visibility, Billable Users Calculation, Storage Usage Visibility, and CI Minutes Usage Visibility" 
   direction: 
+  available: 
+  viable: 2020-10-19
+  complete:
+  lovable:
+  maturity: viable
   marketing: false
-  maturity:
 
 subscription_cost_management:
   name: Subscription Cost Management
   stage: fulfillment
   description: "Enables Subscription Admins to manage their subscription costs. Includes Seat Limits, Storage Quota, CI Minutes Quotas." 
   direction: 
+  available: 2021-02-13
+  viable: 
+  complete:
+  lovable:
+  maturity: minimal
   marketing: false
-  maturity:
 
 fulfillment_infrastructure:
   name: Fulfillment Infrastructure
   stage: fulfillment
   description: "CustomersDot availability, reliability, performance, scalability, delivery, and observability efforts."
   direction: https://about.gitlab.com/direction/fulfillment/platform/#infradev-roadmap-and-vision
+  available: 
+  viable: 
+  complete:
+  lovable:
+  maturity: viable
   marketing: false
-  maturity:
 
 fulfillment_developer_productivity:
   name: Fulfillment Developer Productivity
   stage: fulfillment
   description: "Make Fulfillment developers more productive via improved development tooling."
   direction: 
+  available: 
+  viable: 
+  complete:
+  lovable:
+  maturity: minimal
   marketing: false
-  maturity:
 
 customersdot_application: 
   name: CustomersDot Application
   stage: fulfillment
   description: "Build, improve and maintain the overall CustomersDot Application, including Sign-up/Sign in/SSO, Zuora integration, OTC Data Architecture in CDot."
   direction: 
+  available: 
+  viable: 
+  complete:
+  lovable:
+  maturity: viable
   marketing: false
-  maturity: 
 
 fulfillment_admin_tooling:
   name: Fulfillment Admin Tooling
   stage: fulfillment
   description: "The Fulfillment Admin Tools team works with internal teams to build robust systems that enable our internal, customer-facing teams better support our customers."
   direction: https://about.gitlab.com/direction/fulfillment/fulfillment-admin-tools/
+  available: 
+  viable: 
+  complete:
+  lovable:
+  maturity: minimal
   marketing: false
-  maturity: 
 
 
 # Data Science Section
