--- a/data/team_members/person/k/katiemacoy.yml
+++ b/data/team_members/person/k/katiemacoy.yml
@@ -2,7 +2,7 @@
 name: Katie Macoy
 locality:
 country: Remote
-role: <a href="/job-families/product/product-designer/">Product Designer</a>, Data Science:Applied ML & Anti-Abuse, Package:Package Registry (Interim)</a>
+role: <a href="/job-families/product/product-designer/">Product Designer</a>, Data Science:Applied ML & Anti-abuse</a>
 reports_to: rayana
 picture: katiemacoy.png
 pronouns: she/her
@@ -14,7 +14,6 @@ departments:
 - Engineering Function
 - UX Department
 - Data Science Section
-- Package Stage
 projects:
   gitlab: reviewer UX
   gitlab-design: maintainer
@@ -24,5 +23,5 @@ story: Katie is a designer who enjoys shipping useful products. She started her 
   enjoys works closely with engineers and product managers to frame the problem and
   come up with simple solutions. Outside of work, Katie is an avid cook and enjoys
   keeping fit.
-specialty: 'ModelOps: Applied ML'
+specialty: 'ModelOps: Applied ML & Anti-abuse'
 
