Updating reporting structure and job titles per Verify re-org

--- a/data/team_members/person/c/carolinesimpson.yml
+++ b/data/team_members/person/c/carolinesimpson.yml
@@ -1,7 +1,7 @@
 name: Caroline Simpson
 locality: 
 country: Remote
-role: <a href="/job-families/engineering/development/backend/#backend-engineering-manager">Backend
+role: <a href="/job-families/engineering/development/management/#fullstack-manager">Fullstack
   Engineering Manager, Verify:Pipeline Execution</a>
 reports_to: cheryl-li
 picture: carolinesimpson.jpg
