--- a/data/team_members/person/p/payton-burdette.yml
+++ b/data/team_members/person/p/payton-burdette.yml
@@ -4,7 +4,7 @@ locality:
 country: Remote
 role: <a href="/job-families/engineering/development/frontend/">Senior Frontend Engineer,
   Verify:Pipeline Execution</a>
-reports_to: sam-beckham
+reports_to: carolinesimpson
 picture: paytonburdette.jpg
 twitter: beardedpayton
 gitlab: pburdette
