--- a/data/team_members/person/b/bsandlin.yml
+++ b/data/team_members/person/b/bsandlin.yml
@@ -4,7 +4,7 @@ locality:
 country: Remote
 role: <a href="/job-families/engineering/development/frontend/senior/">Senior Frontend
   Engineer, Verify:Pipeline Authoring</a>
-reports_to: sam-beckham
+reports_to: marknuzzo
 picture: briley-sandlin.jpg
 pronouns: she/her
 pronunciation:
