--- a/data/team_members/person/e/elliot-rushton.yml
+++ b/data/team_members/person/e/elliot-rushton.yml
@@ -2,7 +2,7 @@
 name: Elliot Rushton
 locality:
 country: Remote
-role: <a href="/job-families/engineering/development/backend/#backend-manager-engineering">Backend
+role: <a href="/job-families/engineering/development/management/#fullstack-manager">Fullstack
   Engineering Manager, Verify:Runner</a>
 reports_to: danielcroft
 picture: elliotrushton.jpg
