--- a/data/team_members/person/f/frederic-caplette.yml
+++ b/data/team_members/person/f/frederic-caplette.yml
@@ -4,7 +4,7 @@ locality:
 country: Remote
 role: <a href="/job-families/engineering/development/frontend/senior/">Senior Frontend Engineer,
   Verify:Pipeline Authoring</a>
-reports_to: sam-beckham
+reports_to: marknuzzo
 picture: frederic-caplette.jpg
 gitlab: f_caplette
 pronouns: he/him
