--- a/data/team_members/person/m/marknuzzo.yml
+++ b/data/team_members/person/m/marknuzzo.yml
@@ -3,7 +3,7 @@ name: Mark Nuzzo
 locality:
 country: Remote
 reports_to: cheryl-li
-role: <a href="/job-families/engineering/development/backend/manager/">Backend
+role: <a href="/job-families/engineering/development/management/#fullstack-manager">Fullstack
   Engineering Manager, Verify:Pipeline Authoring</a>
 picture: marknuzzo.jpg
 pronouns: he/him
