--- a/data/team_members/person/m/mireya-andres.yml
+++ b/data/team_members/person/m/mireya-andres.yml
@@ -4,7 +4,7 @@ locality:
 country: Remote
 role: <a href="/job-families/engineering/development/frontend/">Frontend Engineer,
   Verify:Pipeline Authoring</a>
-reports_to: sam-beckham
+reports_to: marknuzzo
 picture: mireya-andres.jpg
 pronunciation:
 twitter:
