--- a/data/team_members/person/m/mrincon.yml
+++ b/data/team_members/person/m/mrincon.yml
@@ -4,7 +4,7 @@ locality:
 country: Remote
 role: <a href="/job-families/engineering/development/frontend/">Senior Frontend Engineer,
   Verify:Runner</a>
-reports_to: sam-beckham
+reports_to: elliot-rushton
 picture: mrincon.jpg
 twitter: miguelrincon86
 gitlab: mrincon
