Adds maintainership roles to projects

--- a/data/team_members/person/i/idawson.yml
+++ b/data/team_members/person/i/idawson.yml
@@ -9,6 +9,8 @@ twitter: _wirepair
 pronouns: he/him
 projects:
   secure-DS-gemnasium-db: maintainer
+  secure-dast: maintainer
+  secure-browser-based-dast: maintainer
 departments:
 - Engineering Function
 - Development Department
