--- a/data/team_members/person/a/ashrafkhamis.yml
+++ b/data/team_members/person/a/ashrafkhamis.yml
@@ -3,7 +3,7 @@ name: Ashraf Khamis
 locality:
 country: Remote
 role: <a href="/job-families/product/technical-writer/#senior-technical-writer">Senior
-  Technical Writer</a>, Manage:Integrations, Create:Editor, and Data Stores:Global Search
+  Technical Writer</a>
 reports_to: kpaizee
 picture: ashrafkhamis.jpg
 pronouns: he/him
