Update stages and team members to reflect Basti as manager

--- a/data/stages.yml
+++ b/data/stages.yml
@@ -1592,7 +1592,7 @@ stages:
         pm: Sam Kerr (Acting)
         pmm: Saumya Upadhyaya
         cm: Suri Patel
-        backend_engineering_manager: Dennis Tang
+        backend_engineering_manager: Sebastian Rehm
         support: TBD
         be_team_tag: Product Intelligence Team
         appsec_engineer: Greg Alfaro
