--- a/data/team_members/person/n/nbelokolodov.yml
+++ b/data/team_members/person/n/nbelokolodov.yml
@@ -2,7 +2,7 @@ name: Niko Belokolodov
 locality:
 country: Remote
 role: <a href="/job-families/engineering/development/backend/">Senior Backend Engineer, Product Intelligence</a>
-reports_to: dennis
+reports_to: bastirehm
 picture: nbelokolodov.jpeg
 linkedin: travelerspb
 gitlab: nbelokolodov
