--- a/data/team_members/person/m/michold.yml
+++ b/data/team_members/person/m/michold.yml
@@ -3,7 +3,7 @@ name: Michał Wielich
 locality:
 country: Remote
 role: <a href="/job-families/engineering/development/backend/">Backend Engineer, Product Intelligence</a>
-reports_to: dennis
+reports_to: bastirehm
 picture: michalwielich.jpg
 pronouns: he/him
 pronunciation: me-how
