--- a/data/team_members/person/p/piotrskorupa.yml
+++ b/data/team_members/person/p/piotrskorupa.yml
@@ -4,7 +4,7 @@ locality:
 country: Remote
 role: <a href="/job-families/engineering/development/backend/">Backend Engineer, Product
   Intelligence</a>
-reports_to: dennis
+reports_to: bastirehm
 picture: piotrskorupa.jpg
 pronouns: he/him
 pronunciation: 
