Update Sam to be the Manager of Foundations

--- a/data/team_members/person/t/thutterer.yml
+++ b/data/team_members/person/t/thutterer.yml
@@ -4,7 +4,7 @@ locality:
 country: Remote
 role: <a href="/job-families/engineering/development/backend/senior/">Senior Backend
   Engineer</a>, Manage:Foundations
-reports_to: leipert
+reports_to: sam-beckham
 picture: thutterer.png
 pronouns:
 pronunciation:
