--- a/data/team_members/person/l/leipert.yml
+++ b/data/team_members/person/l/leipert.yml
@@ -2,9 +2,9 @@
 name: Lukas Eipert
 locality:
 country: Remote
-role: <a href="/job-families/engineering/development/frontend/manager/">Engineering
-  Manager</a>, Manage:Foundations
-reports_to: tim-z
+role: <a href="/job-families/engineering/development/frontend/">Senior Frontend Engineer</a>,
+  Manage:Foundations
+reports_to: sam-beckham
 picture: leipert.jpg
 twitter: leipert_io
 gitlab: leipert
