--- a/data/team_members/person/p/paul-gascou-vaillancourt.yml
+++ b/data/team_members/person/p/paul-gascou-vaillancourt.yml
@@ -4,7 +4,7 @@ locality:
 country: Remote
 role: <a href="/job-families/engineering/development/frontend/">Senior Frontend Engineer</a>,
   Manage:Foundations
-reports_to: leipert
+reports_to: sam-beckham
 picture: paulgascouvaillancourt.jpg
 twitter:
 gitlab: pgascouvaillancourt
