--- a/data/team_members/person/n/nkhalwadekar.yml
+++ b/data/team_members/person/n/nkhalwadekar.yml
@@ -5,10 +5,10 @@ role: <a href="/job-families/product/product-manager/">Product Manager</a>,
   Applied ML
 reports_to: taylormccaslin
 picture: ../gitlab-logo-extra-whitespace.png
-pronouns:
+pronouns: she/her
 pronunciation:
 twitter:
-linkedin:
+linkedin: https://www.linkedin.com/in/neha-khalwadekar/
 gitlab: nkhalwadekar
 departments:
   - Product Management
