Change Dylan Griffith reports_to: nick-nguyen

--- a/data/team_members/person/d/dylan-g.yml
+++ b/data/team_members/person/d/dylan-g.yml
@@ -3,7 +3,7 @@ name: Dylan Griffith
 locality:
 country: Remote
 role: <a href="/job-families/engineering/development/management/principal-engineer/">Principal Engineer, Pods</a>
-reports_to: gitlabbarry
+reports_to: nick-nguyen
 picture: dgriffith.jpg
 twitter:
 gitlab: DylanGriffith
