Update maintainer_mentorship.yml for Drew Stachon

--- a/data/maintainer_mentorship.yml
+++ b/data/maintainer_mentorship.yml
@@ -82,6 +82,7 @@
   trainees:
     - Juliet Wanjohi (@jwanjohi)
     - Carla Drago (@carlad-gl)
+    - Drew Stachon (@drew)
 - mentor: Dmitry Gruzd
   gitlab: dgruzd
   domains:
