--- a/data/team_members/person/d/dteverovsky.yml
+++ b/data/team_members/person/d/dteverovsky.yml
@@ -1,17 +1,19 @@
 name: Danika Teverovsky
 locality: 
 country: Remote
-role: <a href="">Senior UX Researcher</a>
+role: <a href="/job-families/product/ux-researcher/">Senior UX Researcher</a>
 reports_to: annelasch
-picture: ../gitlab-logo-extra-whitespace.png
-pronouns:
+picture: danika_teverovsky.jpg
+pronouns: she/her
 pronunciation:
 twitter:
-linkedin:
+linkedin: danika-teverovsky
 gitlab: dteverovsky
 departments:
-  - UX
-specialty: ""
+  - Product Team
+  - UX Department
+  - UX Research Team
+specialty:
 expertise:
 story:
 
