--- a/data/team_members/person/a/aviellewolfe.yml
+++ b/data/team_members/person/a/aviellewolfe.yml
@@ -3,8 +3,8 @@ name: Avielle Wolfe
 locality:
 country: Remote
 placeholder: true
-role: <a href="/job-families/engineering/development/backend/intermediate/">Backend
-  Engineer, Verify:Pipeline Authoring</a>
+role: <a href="/job-families/engineering/development/backend/senior">Senior Backend Engineer,
+  Verify:Pipeline Authoring</a>
 reports_to: marknuzzo
 picture: aviellewolfe.jpg
 gitlab: avielle
