Make thiagocsf a maintainer of the security report schemas

--- a/data/team_members/person/t/thiagofigueiro.yml
+++ b/data/team_members/person/t/thiagofigueiro.yml
@@ -19,4 +19,5 @@ story: |
   moved to Sydney, Australia to experience another country and new way of life. Hobbies
   include brewing, beekeeping, automation projects and Sci-Fi.
 specialty: Govern
-
+projects:
+  security-report-schemas: maintainer
