Promote Igor Drozdov to Staff Engineer

--- a/data/team_members/person/i/id-backend.yml
+++ b/data/team_members/person/i/id-backend.yml
@@ -2,8 +2,7 @@
 name: Igor Drozdov
 locality:
 country: Remote
-role: <a href="/job-families/engineering/development/backend/">Senior Backend Engineer</a>,
-  Create:Source Code, Systems:Gitaly API
+role: <a href="/job-families/engineering/development/backend/">Staff Backend Engineer</a>, Create:Source Code, Systems:Gitaly API
 reports_to: sean-carroll
 picture: igordrozdov.png
 twitter: rogiwodzard
@@ -27,4 +26,3 @@ story: 'Igor started his career as a software engineer back in 2013. Before join
 
   '
 specialty: Source Code
-
