--- a/data/team_members/person/k/kushal-p.yml
+++ b/data/team_members/person/k/kushal-p.yml
@@ -2,7 +2,7 @@
 name: Kushal Pandya
 locality:
 country: Remote
-role: <a href="/job-families/engineering/development/management/fullstack-manager/">Interim Engineering Manager</a>,
+role: <a href="/job-families/engineering/development/management/fullstack-manager/">Fullstack Engineering Manager</a>,
   Plan:Product Planning</a>
 reports_to: midhir
 picture: kushal.png
