Point to public direction page for Dedicated

--- a/data/categories.yml
+++ b/data/categories.yml
@@ -2404,7 +2404,7 @@ redis:
 dedicated:
   name: "GitLab Dedicated"
   stage: platforms
-  direction: https://internal-handbook.gitlab.io/handbook/engineering/horse/
+  direction: https://about.gitlab.com/direction/saas-platforms/dedicated/
   documentation: https://docs.gitlab.com/ee/user/
   description: "Single-tenant SaaS service"
   roi: false
