Update Nick Nguyen info

--- a/data/pets.yml
+++ b/data/pets.yml
@@ -1353,12 +1353,12 @@
     dog. I love to bite the sleeve, play with Callie, and snuggle with my mom!
 
     '
-- name: Thor
-  picture: thor_nnguyen.png
+- name: Buddy
+  picture: buddy_nnguyen.png
   human: Nick Nguyen
-  story: 'Thor is a sweet and somewhat awkward Norwegian Elkhound. He enjoys treats,
-    rolling in the snow, and making sure we know whenever a visitor arrives to the
-    farm.
+  story: 'Buddy is a mix of beagle, spaniel, and who knows what else. He spends
+    his days following his humans around, snuggling, rolling around in gross things
+    on the farm, and going off on side quests into the woods.
 
     '
 - name: Mia
