Update Pods EM title

--- a/data/team_members/person/g/gitlabbarry.yml
+++ b/data/team_members/person/g/gitlabbarry.yml
@@ -2,7 +2,7 @@
 name: Barry Firman
 locality:
 country: Remote
-role: <a href="/job-families/engineering/development/backend/manager/">Manager, Engineering</a>
+role: <a href="/job-families/engineering/development/backend/manager/">Backend Engineering Manager, Pods</a>
 reports_to: nick-nguyen
 picture: bfirman.png
 pronouns:
