chore: Fix maintainer entries for SAST projects

--- a/data/team_members/person/d/davidnelsongl.yml
+++ b/data/team_members/person/d/davidnelsongl.yml
@@ -16,7 +16,7 @@ departments:
 - Sec Section
 - Secure:Dynamic Analysis BE Team
 projects:
-  secure-api-security: reviewer backend
+  secure-api-security: reviewer
 specialty: Secure
 expertise:
 domain_expertise:
