--- a/data/team_members/person/b/bwill.yml
+++ b/data/team_members/person/b/bwill.yml
@@ -45,6 +45,6 @@ projects:
   - maintainer ci_template
   gitlab-pages: reviewer
   gitlab-runner: reviewer
-  sec-danger-bot: maintainer backend
+  sec-danger-bot: maintainer
   security-report-schemas: reviewer
 
