--- a/data/team_members/person/h/herbermadrigal.yml
+++ b/data/team_members/person/h/herbermadrigal.yml
@@ -16,7 +16,7 @@ departments:
 - Sec Section
 - Secure:Dynamic Analysis BE Team
 projects:
-  secure-api-security: reviewer backend
+  secure-api-security: reviewer
 expertise:
 story: I am a software developer who started coding in 1999, but professionally since
   2005. I have had the chance to work on projects of different sizes, desktop apps,
