--- a/data/team_members/person/r/rossfuhrman.yml
+++ b/data/team_members/person/r/rossfuhrman.yml
@@ -17,11 +17,11 @@ projects:
   gitlab:
     - reviewer backend
     - reviewer ci_template
-  secure-analyzers: reviewer backend
-  secure-SAST-brakeman: trainee_maintainer backend
-  secure-SAST-codequality: maintainer backend
-  secure-SAST-phpcs-security-audit: trainee_maintainer backend
-  secure-SAST-security-code-scan: trainee_maintainer backend
+  secure-analyzers: reviewer
+  secure-SAST-brakeman: trainee_maintainer
+  secure-SAST-codequality: maintainer
+  secure-SAST-phpcs-security-audit: trainee_maintainer
+  secure-SAST-security-code-scan: trainee_maintainer
 pronouns: he/him
 story: 'Ross loves ruby. He is the organizer of the Kansas City Ruby User Group and
   also helps run Rails Girls Kansas City.
