Update /culture CODEOWNERS with team updates

--- a/.gitlab/CODEOWNERS
+++ b/.gitlab/CODEOWNERS
@@ -87,8 +87,8 @@
 /sites/uncategorized/source/stages-devops-lifecycle/ @mpreuss22
 
 ^[Culture]
-/sites/uncategorized/source/company/culture/ @dmurph @jessicareeder @bbula
-/sites/uncategorized/source/company/culture/all-remote/ @dmurph @jessicareeder @bbula
+/sites/uncategorized/source/company/culture/ @dmurph @lfarrer
+/sites/uncategorized/source/company/culture/all-remote/ @dmurph @lfarrer
 /sites/uncategorized/source/company/culture/contribute/ @akramer
 /sites/uncategorized/source/company/culture/cross-culture-collaboration-guide/ @glucchesi @wendybarnes
 /sites/uncategorized/source/company/culture/gitlab-101/ @mmcb @streas
