Migrate manage/optimze to plan/optimize

--- a/data/redirects.yml
+++ b/data/redirects.yml
@@ -4691,3 +4691,8 @@
 - sources: /handbook/engineering/readmes/wayne-haber/development-director-shadow-experiment.html
   target: /handbook/engineering/development/shadow/director-shadow-program.html
   comp_op: '='
+- sources:
+  - /handbook/engineering/development/dev/manage/optimize/
+  - /handbook/engineering/development/dev/manage/optimize
+  target: /handbook/engineering/development/dev/plan/optimize/
+  comp_op: '='
