Make Drew trainee maintainer

--- a/data/team_members/person/d/drew.yml
+++ b/data/team_members/person/d/drew.yml
@@ -9,7 +9,7 @@ picture: drewcimino.png
 twitter:
 gitlab: drew
 projects:
-  gitlab: reviewer backend
+  gitlab: trainee_maintainer backend
   verify-accessibility: maintainer
 departments:
 - Engineering Function
