Add my info in the team page

--- a/data/team_members/person/j/jlep.yml
+++ b/data/team_members/person/j/jlep.yml
@@ -1,16 +1,16 @@
 name: Julien Le Postec
 locality: 
 country: Remote
-role: <a href="">Area Sales Manager</a>
+role: <a href="">Area Sales Manager (MM), South EMEA</a>
 reports_to: benjamincaller
-picture: ../gitlab-logo-extra-whitespace.png
-pronouns:
+picture: julien_lepostec.png
+pronouns: he/his
 pronunciation:
 twitter:
-linkedin:
+linkedin: jlepostec
 gitlab: jlep
-departments:
-  - MM
+departments: 
+  - Commercial Sales
 specialty: ""
 expertise:
 story:
