Adding photo & information for team page

--- a/data/team_members/person/m/mianaranjo-lepe.yml
+++ b/data/team_members/person/m/mianaranjo-lepe.yml
@@ -3,11 +3,11 @@ locality:
 country: Remote
 role: <a href="">People Connect Specialist</a>
 reports_to: mpatel8
-picture: ../gitlab-logo-extra-whitespace.png
-pronouns:
+picture: mianaranjolepe.png
+pronouns: she/ her 
 pronunciation:
 twitter:
-linkedin:
+linkedin: mia-naranjo-lepe
 gitlab: mianaranjo-lepe
 departments:
   - People Operations
