Remove AJ per offboarding

--- a/.gitlab/CODEOWNERS
+++ b/.gitlab/CODEOWNERS
@@ -429,7 +429,7 @@ sites/handbook/source/handbook/marketing/corporate-marketing/corporate-communica
 /sites/handbook/source/handbook/people-group/ @wendybarnes @pegan @cbednarz @rallen3 @mpatel8 @cgudgenov
 /sites/handbook/source/handbook/people-group/acceptable-use-policy/ @wendybarnes @akramer @emilyplotkin @pegan
 /sites/handbook/source/handbook/people-group/employment-solutions/ @pegan @hdevlin
-/sites/handbook/source/handbook/people-group/contracts-probation-periods/ @ashjameson @mpatel8 @shensiek @alex_venter @Mowry @nutaurus
+/sites/handbook/source/handbook/people-group/contracts-probation-periods/ @mpatel8 @shensiek @alex_venter @Mowry @nutaurus
 /sites/handbook/source/handbook/people-group/people-compliance/ @cgudgenov
 /sites/handbook/source/handbook/people-group/general-onboarding/ @mpatel8 @Mowry @alex_venter @anechan @asjones @nutaurus
 /sites/handbook/source/handbook/people-group/promotions-transfers/ @wendybarnes @mpatel8
