--- a/data/team_members/person/d/dannyjb.yml
+++ b/data/team_members/person/d/dannyjb.yml
@@ -12,7 +12,8 @@ gitlab: djb
 departments:
   - Customer Support
 specialty: 
-expertise:
+expertise: |
+  <li><a href="/handbook/on-call/">On-call</a> champion!</li>
 story: >
   'Danny is a support engineer with a passion for open source technology, luthiery and PC gaming.
   After many years working in support, Danny has found his joy in helping people with technology and developing automation to make life easier.'
