--- a/data/team_members/person/n/nbelokolodov.yml
+++ b/data/team_members/person/n/nbelokolodov.yml
@@ -16,7 +16,7 @@ projects:
   - trainee_maintainer backend
   - reviewer product_intelligence  
   version-gitlab-com:
-  - trainee_maintainer backend
+  - maintainer backend
 specialty: Product Intelligence
 story: 'I am a passionate software developer who enjoys solving complex problems, learning new technologies and contributing to opensource projects.
 In my spare time you can find me mountain biking, surfing or playing piano.'
