Update team member page

--- a/data/team_members/person/d/drcatherinepope.yml
+++ b/data/team_members/person/d/drcatherinepope.yml
@@ -1,17 +1,19 @@
 name: Catherine Pope
 locality: 
 country: Remote
-role: <a href="">Technical Writer</a>
+role: <a href="/job-families/product/technical-writer">Technical Writer</a>
 reports_to: kpaizee
-picture: ../gitlab-logo-extra-whitespace.png
-pronouns:
+picture: catherinepope.png
+pronouns: she/her
 pronunciation:
-twitter:
-linkedin:
+twitter: drcatherinepope
+linkedin: drcatherinepope
 gitlab: drcatherinepope
 departments:
   - UX
 specialty: ""
 expertise:
-story:
+story: >
+  Catherine loves technology, reading, and anything to do with the nineteenth century.
+  She lives by the sea with her partner, stripy cat, and thousands of (mostly Victorian) books.
 
