Add next TWs for structural check

--- a/data/release_post_managers.yml
+++ b/data/release_post_managers.yml
@@ -10,7 +10,7 @@ releases:
   manager: tbd
   manager-name: tbd
   manager-shadow: tbd
-  structural_check: tbd
+  structural_check: lciutacu
   messaging: tbd
   messaging-shadow: tbd
   social: --
@@ -21,7 +21,7 @@ releases:
   manager: hsutor
   manager-name: Hannah Sutor
   manager-shadow: tbd
-  structural_check: tbd
+  structural_check: msedlakjakubowski
   messaging: BrianMason
   messaging-shadow: tbd
   social: --
