Adding my info to the Team page

--- a/data/team_members/person/j/jmatthewj.yml
+++ b/data/team_members/person/j/jmatthewj.yml
@@ -3,11 +3,11 @@ locality:
 country: Remote
 role: <a href="">Senior Brand Manager</a>
 reports_to: rclayman
-picture: ../gitlab-logo-extra-whitespace.png
+picture: jmatthewj.jpg
 pronouns:
 pronunciation:
 twitter:
-linkedin:
+linkedin: jmatthewjordan
 gitlab: jmatthewj
 departments:
   - Brand Activation
