Mark Runner SaaS team members as Runner SaaS

--- a/data/team_members/person/d/dbickford.yml
+++ b/data/team_members/person/d/dbickford.yml
@@ -14,7 +14,7 @@ departments:
   - Development Department
   - Ops Sub-department
   - Verify Stage
-  - Verify:Runner Group
+  - Verify:Runner SaaS Group
   - Backend
 specialty: Runner SaaS
 expertise:
