--- a/data/team_members/person/j/josephburnett.yml
+++ b/data/team_members/person/j/josephburnett.yml
@@ -1,7 +1,7 @@
 name: Joe Burnett
 locality: 
 country: Remote
-role: <a href="/job-families/engineering/development/backend/staff/">Staff Backend Engineer</a>
+role: <a href="/job-families/engineering/development/backend/staff/">Staff Backend Engineer, Verify:Runner SaaS</a>
 reports_to: elliot-rushton
 picture: josephburnett.png
 pronouns: he/him
@@ -11,9 +11,10 @@ departments:
 - Engineering Function
 - Development Department
 - Ops Sub-department
-- Verify:Runner Group
-- Runner BE Team
-specialty: ""
+- Verify Stage
+- Verify:Runner SaaS Group
+- Backend
+specialty: Runner SaaS
 expertise:
 story: |
  Joe is a Staff Backend Engineer who loves running, coding in Golang
