--- a/data/team_members/person/a/ahuntsman.yml
+++ b/data/team_members/person/a/ahuntsman.yml
@@ -1,7 +1,7 @@
 name: Aaron Huntsman
 locality: 
 country: Remote
-role: <a href="/job-families/engineering/backend-engineer/">Senior Backend Engineer</a>
+role: <a href="/job-families/engineering/development/backend/">Senior Backend Engineer</a>, Govern:Compliance
 reports_to: nrosandich
 picture: aaronhuntsman.jpg
 pronouns: he/him
