--- a/data/team_members/person/h/huzaifaiftikhar1.yml
+++ b/data/team_members/person/h/huzaifaiftikhar1.yml
@@ -2,7 +2,7 @@
 name: Huzaifa Iftikhar
 locality:
 country: Remote
-role: <a href="/job-families/engineering/development/backend/">Backend Engineer</a>,
+role: <a href="/job-families/engineering/development/backend/">Senior Backend Engineer</a>,
   Govern:Compliance
 reports_to: nrosandich
 picture: huzaifaiftikhar.jpg
