Updating department, photo and pronouns.

--- a/data/team_members/person/a/ameeks.yml
+++ b/data/team_members/person/a/ameeks.yml
@@ -3,14 +3,14 @@ locality:
 country: Remote
 role: <a href="">Manager, People Connect</a>
 reports_to: mpatel8
-picture: ../gitlab-logo-extra-whitespace.png
-pronouns:
+picture: alissameeks.jpg
+pronouns: She/Her
 pronunciation:
 twitter:
 linkedin:
 gitlab: ameeks
 departments:
-  - People Operations
+  - People Connect
 specialty: ""
 expertise:
 story:
