final update for team member page

--- a/data/team_members/person/a/ameeks.yml
+++ b/data/team_members/person/a/ameeks.yml
@@ -1,3 +1,4 @@
+---
 name: Alissa Meeks
 locality: 
 country: Remote
@@ -13,7 +14,7 @@ departments:
   - People Group
   - People Operations
   - People Connect Team
-specialty: ""
+specialty: 
 expertise:
 story:
 
