--- a/data/projects.yml
+++ b/data/projects.yml
@@ -57,6 +57,13 @@ gitlab-workhorse:
     requests such as file downloads, file uploads, Git push/pull and Git archive
     downloads.
 
+project-templates:
+  name: GitLab Project Templates
+  path: gitlab-org/project-templates
+  link: https://gitlab.com/gitlab-org/project-templates
+  description: |
+    GitLab project-templates are a collection of language-specific starter templates.
+
 omnibus-gitlab:
   name: Omnibus GitLab
   path: gitlab-org/omnibus-gitlab
@@ -1131,9 +1138,9 @@ gitlab-cli:
   path: gitlab-org/cli
   link: https://gitlab.com/gitlab-org/cli
   description: |
-    GLab is an open source GitLab CLI tool bringing GitLab to your terminal next 
-    to where you are already working with git and your code without switching 
-    between windows and browser tabs. Work with issues, merge requests, watch 
+    GLab is an open source GitLab CLI tool bringing GitLab to your terminal next
+    to where you are already working with git and your code without switching
+    between windows and browser tabs. Work with issues, merge requests, watch
     running pipelines directly from your CLI among other features.
 
 discoto:
