--- a/data/team_members/person/i/id-backend.yml
+++ b/data/team_members/person/i/id-backend.yml
@@ -19,6 +19,7 @@ projects:
   - maintainer workhorse
   - maintainer backend
   - reviewer database
+  project-templates: maintainer
 story: 'Igor started his career as a software engineer back in 2013. Before joining
   GitLab, he was working for companies from London and Hamburg. Igor enjoys Ruby language,
   but also passionate about functional programming. In his spare time, you can find
